--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,8 @@
   padding: 0;
 }
 
+
+
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
@@ -345,7 +347,7 @@ button {
 }
 
 .landing-inner {
-  color: #fff;
+  color: rgb(255, 255, 255);
   height: 100%;
   width: 80%;
   margin: auto;
